--- a/conda_env.yml
+++ b/conda_env.yml
@@ -6,11 +6,15 @@ channels:
 dependencies:
 - cython=0.25.2=py27_0
 - ipython=5.3.0=py27_0
+- matplotlib
 - nose=1.3.7=py27_1
 - numexpr=2.6.2=np112py27_0
-- numpy=1.12.0=py27_0
-- python=2.7.11=5
-- scipy=0.18.1=np112py27_1
+- numpy=1.12.0
+- pandas
+- pyproj=1.9.5.1
+- python=2.7.16
+- scipy=0.18.1
 - geomag=0.9.2015
 - pygsw=0.0.11
+- quantities
 prefix: ion
