--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-numpy==1.12.0
-Cython==0.25.2
-geomag==0.9.2015
-ipython==5.3.0
-nose==1.3.7
-numexpr==2.6.2
-pygsw
-scipy==0.18.1
+cython=0.25.2
+ipython=5.3.0
+matplotlib
+nose=1.3.7
+numexpr=2.6.2
+numpy=1.16
+scipy=1.2.1
+geomag=0.9.2015
+pygsw=0.0.11
+
