Issue #14537 - adjust travis memory for tests
Change-Id: Ib56bf7c4e25a6fc2e4e3733ed7ecad545025b773

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
   - chmod +x miniconda.sh
   - ./miniconda.sh -b
   - export PATH=/home/travis/miniconda2/bin:$PATH
+  - export TRAVIS_WORKER_DOCKER_MEMORY=0
   - conda update --yes conda
 
 # Install packages
